@@ -40,10 +40,7 @@
 		<maven-compiler-plugin.source>11</maven-compiler-plugin.source>
 		<maven-compiler-plugin.target>11</maven-compiler-plugin.target>
 		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-		<apache.httpclient.version>4.5.13</apache.httpclient.version>
-		<apache.httpcore.version>4.4.14</apache.httpcore.version>
 		<spring.data.jpa.version>2.0.7.RELEASE</spring.data.jpa.version>
-		<postgresql.version>42.2.16</postgresql.version>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
 		<maven.surefire.plugin.version>2.20</maven.surefire.plugin.version>
 		<maven.jacoco.version>0.8.5</maven.jacoco.version>
@@ -51,8 +48,25 @@
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
 		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
+		<kernel.core.version>1.2.0.1</kernel.core.version>
+		<bouncycastle.version>1.66</bouncycastle.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-core</artifactId>
+			<version>${kernel.core.version}</version>
+		</dependency>
+		<dependency> 
+			<groupId>org.json</groupId>
+		 	<artifactId>json</artifactId> 
+		 	<version>20180813</version>
+		 </dependency>
+		 <dependency> 
+		 	<groupId>commons-collections</groupId>
+		  	<artifactId>commons-collections</artifactId>
+		   	<version>3.2.2</version> 
+		  </dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
 <!--			<artifactId>spring-boot-starter-security</artifactId>-->
@@ -61,12 +75,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -80,7 +94,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
+            <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
@@ -88,22 +102,22 @@
 			<artifactId>activation</artifactId>
 			<version>1.1</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.27.0-GA</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
-		</dependency>
-		<dependency>
+		</dependency> -->
+		<!--<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>${apache.httpclient.version}</version>
@@ -112,7 +126,7 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
 			<version>${apache.httpcore.version}</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -123,7 +137,7 @@
     		<artifactId>json-simple</artifactId>
     		<version>1.1</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.9.2</version>
@@ -132,17 +146,16 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.5.10</version>
 		</dependency>
-
-		<dependency>
+		<!-- <dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
-			<version>1.2.0.1-B2</version>
+			<version>1.2.0.1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.bouncycastle</groupId>
@@ -153,44 +166,7 @@
 					<artifactId>bcpkix-jdk15on</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-
-<!--		<dependency>-->
-<!--			<groupId>io.mosip.kernel</groupId>-->
-<!--			<artifactId>kernel-core</artifactId>-->
-<!--			<version>1.2.0.1-B2</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>com.auth0</groupId>-->
-<!--			<artifactId>java-jwt</artifactId>-->
-<!--			<version>3.8.1</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>io.mosip.kernel</groupId>-->
-<!--			<artifactId>kernel-core</artifactId>-->
-<!--			<version>1.2.0.1</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.apache.commons</groupId>-->
-<!--			<artifactId>commons-math3</artifactId>-->
-<!--			<version>3.6.1</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>commons-collections</groupId>-->
-<!--			<artifactId>commons-collections</artifactId>-->
-<!--			<version>3.2.2</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.json</groupId>-->
-<!--			<artifactId>json</artifactId>-->
-<!--			<version>20180813</version> &lt;!&ndash; Use the latest version if required &ndash;&gt;-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>io.mosip.kernel</groupId>-->
-<!--			<artifactId>kernel-openid-bridge-api</artifactId>-->
-<!--			<version>1.2.0.1</version>-->
-<!--		</dependency>-->
-
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-activemq</artifactId>
@@ -215,6 +191,21 @@
 
 	<dependencyManagement>
 		<dependencies>
+		<!-- <dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-auth-adapter</artifactId>
+			<version>1.2.0.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.bouncycastle</groupId>
+					<artifactId>bcprov-jdk15on</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.bouncycastle</groupId>
+					<artifactId>bcpkix-jdk15on</artifactId>
+				</exclusion>
+			</exclusions>
+			</dependency> -->
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
@@ -314,6 +305,7 @@
 					<argLine>
 						${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
 					</argLine>
+					 <argLine>--add-modules jdk.crypto.ec</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
